--- a/source/_posts/2016-05-20-git-init.markdown
+++ b/source/_posts/2016-05-20-git-init.markdown
@@ -3,7 +3,9 @@ layout: post
 title: "Git init"
 date: 2016-05-20 00:54:00 -0300
 comments: true
-categories: [Teste]
+categories: [start]
 ---
 
-Este é o início do meu blog. Sim resolvi fazer um blog, não não gosto de ...
+Olá, me chamo Dayvson Lima e este é o meu blog. Pretendo usar este espaço para compartilhar não só coisas sober programação que é minha especialidade, mas também qualquer outro assunto que eu achar interessante e que possa de alguma forma ajudar as pessoas que estarão lendo. 
+
+Sinceramente não sei se este projeto dará certo, mas prometo que irei postar muita coisa boa! Então é só aguardar ;)
